# nats-leaf-node-gateway

./: .dockerignore  .gitignore  BENCHMARKS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: test.yml.disabled
async-nats/: Cargo.toml
async-nats/src/: connection.rs  header.rs  lib.rs
bench/: memory.sh  profile_pubonly.sh  smoke_test.sh  throughput.sh
docs/: architecture.md  backlog.md  goals.md  lld.md
docs/adr/: 002-direct-writer.md  005-batched-notifications.md  009-leaf-hub-feature-flags.md  011-udp-binary-transport.md  012-sharded-workers-in-process-routing.md
examples/chat/: README.md  index.html
nats-server/: BENCHMARKS.md  Cargo.toml  bench.sh  smoke_test.sh
nats-server/benches/: throughput.rs
nats-server/docs/: backlog.md  goals.md
nats-server/examples/: leaf_server.rs
nats-server/src/: client_conn.rs  lib.rs  nats_proto.rs  protocol.rs  server.rs  sub_list.rs  upstream.rs  websocket.rs  worker.rs
nats-server/tests/: e2e.rs
open-wire/bench/: memory.sh  profile.sh  profile_hubleaf.sh  profile_pubonly.sh  smoke_test.sh  (+3 more)
sample-app/: README.md
src/: buf.rs  client_handler.rs  config.rs  direct_writer.rs  gateway_conn.rs  gateway_handler.rs  handler.rs  leaf_handler.rs  lib.rs  main.rs  msg_writer.rs  nats_proto.rs  propagation.rs  protocol.rs  reactor.rs  route_conn.rs  route_handler.rs  server.rs  sub_list.rs  types.rs  upstream.rs  websocket.rs  worker.rs
tests/: bench_netns.sh  binary_delivery.rs  e2e.rs  profile.sh  profile_hubleaf.sh  profile_pubsub.sh  profile_run.sh  smoke_test.sh  throughput.rs  throughput.sh
(+49 files in other folders)
