[package]
name = "open-wire"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
autobenches = false
autotests = false

[dependencies]
bytes = "1.4.0"
libc = "0.2"
memchr = "2.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.104"
tracing = "0.1"

[dev-dependencies]
async-nats = { version = "0.46", default-features = false }
criterion = "0.5"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "throughput"
path = "tests/throughput.rs"
harness = false

[[test]]
name = "e2e"
path = "tests/e2e.rs"

[profile.release]
debug = 1
strip = false
